2004-11-21 Axel Simon <A.Simon@kent.ac.uk> 

	* Makefile.am, configure.ac: Generating dependencies now involves
	building c2hs on the fly. This is bad for saying make clean on a
	clean tree, but so far I this is the cleanest solution.

	* gtk/*/*.chs.cpp: Renamed all these files to .chs.pp since
	automake otherwise thinks they are C++ sources.

2004-10-28  Axel Simon <A.Simon@kent.ac.uk>

	* mk/mkDepend.in: Undo changes. Dependencies are again where the
	.chs ffiles are.

	* Makefile.am: Fancy dependency generation through makes built-in
	feature of updating files that are -include'd. I had to sacrifice
	separate CFLAGS for different packages/applications. See comment
	at the beginning of Makefile.am.
	
2004-10-27  Axel Simon <A.Simon@kent.ac.uk>

	* mk/mkDepend.in: Redirect dependencies into .dep/ directory.
	
	* Makefile.am: Now builds libgtk2hs.a. Managed to define rule to
	turn .chs.cpp into .chs, hence renamed all files that need to be
	pre-processed.

	* gtk/*/*.chspp: Renamed to .chs.cpp
	
2004-10-25  Axel Simon <A.Simon@kent.ac.uk>

	* configure.ac: Don't update mk/config.mk.in which no longer
	exists.

	* Makefile.am: Repair automake: Force object files to be in
	subdirectories.

	* aclocal.m4: Removed. This file is regenerated automatically.
	
2004-10-24  Axel Simon <A.Simon@kent.ac.uk>

	* configure.in, configure.ac, Makefile, Makefile.am: Removed old
	and added new versions these. The new build system is based on
	automake. 38 files in gtk/* were pre-processed with cpp. These
	have all been renamed to .chspp.
	
	* tools/hierachyGen/TypeGen.hs: Add newline to help message. Let
	generated file import withForeignPtr which is used by the c2hs
	generated code.

2004-09-04  Axel Simon <A.Simon@kent.ac.uk>

	* Makefile, mk/recurse.mk: Set MAKE_APPS to empty and introduce
	MAKE_DEMOS. Demos are only built on "make all" not on "make
	inplace". Demos are never installed, applications are. The latter
	never did anything since mk/application.mk does not provide an